# winnie-the-pooh-qwen

./: .gitignore  PRD.md  README.md  empty_predictions.txt  empty_predictions_v2.txt  empty_predictions_v3.txt  explainer.py  explore_explanations.ipynb  find_missing_neurons.py  main.py  mark_activation_types.py  pyproject.toml  qwen_model_responses.json  qwen_sae_server.ipynb  requirements.txt  run_clamped.py  score_simulations.py  similarity.py  simple_server.py  simulator.py
.ipynb_checkpoints/: explore_explanations-checkpoint.ipynb
activation_collector/: __init__.py  collector.py  config.py  export.py  heap_tracker.py  pretokenize.py
activation_outputs/: 0_10033.parquet  0_10033_bottomk.parquet  0_10033_topk.parquet  0_10048.parquet  0_10048_bottomk.parquet  0_10048_topk.parquet  0_10205.parquet  0_10205_bottomk.parquet  0_10205_topk.parquet  0_10261.parquet  0_10261_bottomk.parquet  0_10261_topk.parquet  0_10280.parquet  0_10280_bottomk.parquet  0_10280_topk.parquet  0_10332.parquet  0_10332_bottomk.parquet  0_10332_topk.parquet  0_10351.parquet  0_10351_bottomk.parquet  0_10351_topk.parquet  0_10363.parquet  0_10363_bottomk.parquet  0_10363_topk.parquet  0_10493.parquet  0_10493_bottomk.parquet  0_10493_topk.parquet  0_10608.parquet  0_10608_bottomk.parquet  0_10608_topk.parquet  0_1063.parquet  0_1063_bottomk.parquet  0_1063_topk.parquet  0_10645.parquet  0_10645_bottomk.parquet  0_10645_topk.parquet  0_10737.parquet  0_10737_bottomk.parquet  0_10737_topk.parquet  0_10764.parquet  (+3353 more)
assets/: chinese_censored_topics.csv
clamping/: censorship_neurons.md  clamped_dissent.json  clamped_refusal.json  run_clamped.py
(+4244 files in other folders)
