[project]
name = "winnie-the-pooh-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.5.0",
    "einops>=0.8.2",
    "flask>=3.1.2",
    "huggingface-hub==0.27.0",
    "jaxtyping>=0.3.6",
    "nnsight==0.3.7",
    "odps>=3.5.1",
    "pyahocorasick>=2.3.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "strenum>=0.4.15",
    "tokenizers==0.21.0",
    "tqdm>=4.67.1",
    "transformer-lens==2.15.4",
    "wandb>=0.24.1",
    "zstandard>=0.25.0",
    "duckdb>=1.0.0",
    "openai>=2.20.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]
